grammar.js
  word: $ => $.command_name,
  rules: {
    source_file: $ => repeat($._root_content),

    //--- Trivia

    line_comment: $ => /%[^\r\n]*/,

    block_comment: $ =>
      seq(
        field('begin', '\\iffalse'),
        field('comment', optional(alias($._trivia_raw_fi, $.comment))),
        field('end', optional('\\fi')),
      ),

    //--- Content

    _root_content: $ => choice($._section, $._paragraph, $._flat_content),

    _flat_content: $ => prec.right(choice($._text_with_env_content, '[', ']')),

    _text_with_env_content: $ =>
      choice(
        ',',
        '=',
        $.comment_environment,
        $.verbatim_environment,
        $.listing_environment,
        $.minted_environment,
        $.asy_environment,
        $.asydef_environment,
        $.pycode_environment,
        $.luacode_environment,
        $.sagesilent_environment,
        $.sageblock_environment,
        $.generic_environment,
        $.math_environment,
        $._text_content,
      ),

    _text_content: $ =>
      prec.right(
        1,
        choice(
          $.curly_group,
          $.block_comment,
          $._command,
          $.text,
          $._math_content,
          '(',
          ')',
        ),
      ),

    //--- Sections

    _paragraph: $ =>
      prec.right(
        choice(
          repeat1($.paragraph),
          repeat1($.subparagraph),
          repeat1($.enum_item),
        ),
      ),

    _part_declaration: $ =>
      prec.right(
        seq(
          field(
            'command',
            choice('\\part', '\\part*', '\\addpart', '\\addpart*'),
          ),
          optional($._section_part),
        ),
      ),

    part: $ =>
      prec.right(
        -1,
        seq(
          $._part_declaration,
          repeat($._flat_content),
          optional(prec.right(-1, $._paragraph)),
          optional(
            prec.right(
              choice(
                repeat1($.chapter),
                repeat1($.section),
                repeat1($.subsection),
                repeat1($.subsubsection),
              ),
            ),
          ),
        ),
      ),

    _chapter_declaration: $ =>
      prec.right(
        seq(
          field(
            'command',
            choice('\\chapter', '\\chapter*', '\\addchap', '\\addchap*'),
          ),
          optional($._section_part),
        ),
      ),

    chapter: $ =>
      prec.right(
        -1,
        seq(
          $._chapter_declaration,
          repeat($._flat_content),
          optional(prec.right(-1, $._paragraph)),
          optional(
            prec.right(
              choice(
                repeat1($.section),
                repeat1($.subsection),
                repeat1($.subsubsection),
              ),
            ),
          ),
        ),
      ),

    _section_declaration: $ =>
      prec.right(
        seq(
          field(
            'command',
            choice('\\section', '\\section*', '\\addsec', '\\addsec*'),
          ),
          optional($._section_part),
        ),
      ),

    section: $ =>
      prec.right(
        -1,
        seq(
          $._section_declaration,
          repeat($._flat_content),
          optional(prec.right(-1, $._paragraph)),
          optional(
            prec.right(choice(repeat1($.subsection), repeat1($.subsubsection))),
          ),
        ),
      ),

    _subsection_declaration: $ =>
      prec.right(
        seq(
          field('command', choice('\\subsection', '\\subsection*')),
          optional($._section_part),
        ),
      ),

    subsection: $ =>
      prec.right(
        -1,
        seq(
          $._subsection_declaration,
          repeat($._flat_content),
          optional(prec.right(-1, $._paragraph)),
          optional(prec.right(repeat1($.subsubsection))),
        ),
      ),

    _paragraph_declaration: $ =>
      prec.right(
        seq(
          field('command', choice('\\paragraph', '\\paragraph*')),
          optional($._section_part),
        ),
      ),

    paragraph: $ =>
      prec.right(
        -1,
        seq(
          $._paragraph_declaration,
          repeat($._flat_content),
          optional(
            prec.right(choice(repeat1($.subparagraph), repeat1($.enum_item))),
          ),
        ),
      ),

    _enum_itemdeclaration: $ =>
      prec.right(
        seq(
          field('command', choice('\\item', '\\item*')),
          field('label', optional($.brack_group_text)),
        ),
      ),

    enum_item: $ =>
      prec.right(
        -1,
        seq(
          $._enum_itemdeclaration,
          repeat($._flat_content),
        ),
      ),

    //--- Group

    curly_group: $ => seq('{', repeat($._root_content), '}'),

    curly_group_text: $ => seq('{', field('text', $.text), '}'),

    curly_group_text_list: $ =>
      seq('{', sepBy(field('text', $.text), ','), '}'),

    curly_group_path: $ => seq('{', field('path', $.path), '}'),

    curly_group_path_list: $ =>
      seq('{', sepBy(field('path', $.path), ','), '}'),

    curly_group_command_name: $ =>
      seq('{', field('command', $.command_name), '}'),

    curly_group_glob_pattern: $ =>
      seq('{', field('pattern', $.glob_pattern), '}'),

    curly_group_impl: $ =>
      seq('{', repeat(choice($._text_content, '[', ']', ',', '=')), '}'),

    brack_group: $ =>
      seq('[', repeat(choice($._text_with_env_content, $.brack_group)), ']'),

    brack_group_text: $ => seq('[', field('text', $.text), ']'),

    brack_group_argc: $ => seq('[', field('value', $.argc), ']'),

    text: $ =>
      prec.right(
        repeat1(
          field(
            'word',
            choice(
              $.operator,
              $.word,
              $.placeholder,
              $.delimiter,
              $.block_comment,
              $._command,
              $.superscript,
              $.subscript,
            ),
          ),
        ),
      ),

    word: $ => /[^\s\\%\{\},\$\[\]\(\)=\#&_\^\-\+\/\*]+/,

    placeholder: $ => /#+\d/,

    delimiter: $ => /&/,

    path: $ => /[^\*\"\[\]:;,\|\{\}<>]+/,

    argc: $ => /\d/,

    glob_pattern: $ => repeat1($._glob_pattern_fragment),

    _glob_pattern_fragment: $ =>
      choice(
        seq('{', repeat($._glob_pattern_fragment), '}'),
        /[^\"\[\]:;\|\{\}<>]+/,
      ),

    operator: $ => choice('+', '-', '*', '/', '<', '>', '!', '|', ':', "'"),

    letter: $ => /[^\\%\{\}\$\#_\^]/,

    subscript: $ =>
      seq(
        '_',
        field('subscript', choice($.curly_group, $.letter, $.command_name)),
      ),

    superscript: $ =>
      seq(
        '^',
        field('superscript', choice($.curly_group, $.letter, $.command_name)),
      ),

    //--- Key / Value

    key_value_pair: $ =>
      seq(field('key', $.text), optional(seq('=', field('value', $.value)))),

    displayed_equation: $ =>
      prec.left(
        seq(choice('$$', '\\['), repeat($._root_content), choice('$$', '\\]')),
      ),

    inline_formula: $ =>
      prec.left(
        seq(choice('$', '\\('), repeat($._root_content), choice('$', '\\)')),
      ),

    _math_delimiter_part: $ =>
      choice($.word, $.command_name, '[', ']', '(', ')', '|'),

    math_delimiter: $ =>
      prec.left(
        seq(
          field(
            'left_command',
            choice('\\left', '\\bigl', '\\Bigl', '\\biggl', '\\Biggl'),
          ),
          field('left_delimiter', $._math_delimiter_part),
          repeat($._root_content),
          field(
            'right_command',
            choice('\\right', '\\bigr', '\\Bigr', '\\biggr', '\\Biggr'),
          ),
          field('right_delimiter', $._math_delimiter_part),
        ),
      ),

    text_mode: $ =>
      seq(
        field('command', choice('\\text', '\\intertext', '\\shortintertext')),
        field('content', $.curly_group),
      ),

    //--- Environments

    begin: $ =>
      prec.right(
        seq(
          field('command', '\\begin'),
          field('name', $.curly_group_text),
          field('options', optional($.brack_group)),
        ),
      ),

    end: $ =>
      prec.right(
        seq(field('command', '\\end'), field('name', $.curly_group_text)),
      ),

    generic_environment: $ =>
      seq(
        field('begin', $.begin),
        repeat($._root_content),
        field('end', $.end),
      ),

    //--- Trivia environments

    ...specialEnvironment({
      rule: 'comment_environment',
      name: 'comment',
    _command: $ =>
      choice(
        $.title_declaration,
        $.author_declaration,
        $.package_include,
        $.class_include,
        $.latex_include,
        $.biblatex_include,
        $.bibstyle_include,
        $.bibtex_include,
        $.graphics_include,
        $.svg_include,
        $.inkscape_include,
        $.verbatim_include,
        $.import_include,
        $.caption,
        $.citation,
        $.counter_declaration,
        $.counter_within_declaration,
        $.counter_without_declaration,
        $.counter_value,
        $.counter_definition,
        $.counter_addition,
        $.counter_increment,
        $.counter_typesetting,
        $.label_definition,
        $.label_reference,
        $.label_reference_range,
        $.label_number,
        $.new_command_definition,
        $.old_command_definition,
        $.let_command_definition,
        $.paired_delimiter_definition,
        $.environment_definition,
        $.glossary_entry_definition,
        $.glossary_entry_reference,
        $.acronym_definition,
        $.acronym_reference,
        $.theorem_definition,
        $.color_definition,
        $.color_set_definition,
        $.color_reference,
        $.tikz_library_import,
        $.hyperlink,
        $.changes_replaced,
        $.todo,
        $.generic_command,
      ),

    generic_command: $ =>
      prec.right(
        seq(
          field('command', $.command_name),
          repeat(field('arg', $.curly_group)),
        ),
      ),

    command_name: $ => /\\([^\r\n]|[@a-zA-Z]+\*?)?/,

    package_include: $ =>
      seq(
        field('command', choice('\\usepackage', '\\RequirePackage')),
        field('options', optional($.brack_group_key_value)),
        field('paths', $.curly_group_path_list),
      ),

    class_include: $ =>
      seq(
        field('command', '\\documentclass'),
        field('options', optional($.brack_group_key_value)),
        field('path', $.curly_group_path),
      ),

    biblatex_include: $ =>
      seq(
        '\\addbibresource',
        field('options', optional($.brack_group_key_value)),
        field('glob', $.curly_group_glob_pattern),
      ),

    graphics_include: $ =>
      seq(
        field('command', '\\includegraphics'),
        field('options', optional($.brack_group_key_value)),
        field('path', $.curly_group_path),
      ),

    paired_delimiter_definition: $ =>
      prec.right(
        seq(
          field(
            'command',
            choice('\\DeclarePairedDelimiter', '\\DeclarePairedDelimiterX'),
          ),
          field('declaration', $.curly_group_command_name),
          field('argc', optional($.brack_group_argc)),
          field('left', choice($.curly_group_impl, $.command_name)),
          field('right', choice($.curly_group_impl, $.command_name)),
          field('body', optional($.curly_group)),
        ),
      ),

    environment_definition: $ =>
      choice($._environment_definition, $._newer_environment_definition, $._new_environment_copy),

    _environment_definition: $ =>
      seq(
        field(
          'command',
          choice(
            '\\newenvironment',
            '\\renewenvironment',
          ),
        ),
        field('name', $.curly_group_text),
        field('argc', optional($.brack_group_argc)),
        field('begin', $.curly_group_impl),
        field('end', $.curly_group_impl),
      ),

    _newer_environment_definition: $ =>
      seq(
        field(
          'command',
          choice(
            '\\NewDocumentEnvironment',
            '\\RenewDocumentEnvironment',
            '\\ProvideDocumentEnvironment',
            '\\DeclareDocumentEnvironment',
          ),
        ),
        field('name', $.curly_group_text),
        field('spec', $.curly_group_spec),
        field('begin', $.curly_group_impl),
        field('end', $.curly_group_impl),
      ),

    _new_environment_copy: $ =>
      seq(
        field(
          'command',
          choice(
            '\\NewEnvironmentCopy',
            '\\RenewEnvironmentCopy',
            '\\DeclareEnvironmentCopy',
          ),
        ),
        field('name', $.curly_group_text),
        field('name', $.curly_group_text),
      ),

    theorem_definition: $ =>
      prec.right(
        seq(
          field(
            'command',
            choice(
              '\\newtheorem',
              '\\newtheorem*',
              '\\declaretheorem',
              '\\declaretheorem*',
            ),
          ),
          optional(field('options', $.brack_group_key_value)),
          field('name', $.curly_group_text_list),
          optional(
            choice(
              seq(
                field('title', $.curly_group),
                field('counter', optional($.brack_group_text)),
              ),
              seq(
                field('counter', $.brack_group_text),
                field('title', $.curly_group),
              ),
            ),
          ),
        ),
      ),

    color_definition: $ =>
      seq(
        field('command', '\\definecolor'),
        optional($.brack_group_text),
        field('name', $.curly_group_text),
        field('model', $.curly_group_text),
        field('spec', $.curly_group),
      ),

    color_reference: $ =>
      prec.right(
        seq(
          field(
            'command',
            choice('\\color', '\\pagecolor', '\\textcolor', '\\mathcolor', '\\colorbox'),
          ),
          choice(
            field('name', $.curly_group_text),
            seq(
              field('model', $.brack_group_text),
              field('spec', $.curly_group),
            ),
          ),
          optional(field('text', $.curly_group)),
        ),
      ),

    tikz_library_import: $ =>
      seq(
        field('command', choice('\\usepgflibrary', '\\usetikzlibrary')),
        field('paths', $.curly_group_path_list),
      ),
